; ModuleID = '/home/carl/AnghaBench/vlc/modules/demux/playlist/extr_itml.c_parse_plist_node.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/demux/playlist/extr_itml.c_parse_plist_node.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"version\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"1.0\00", align 1
@.str.2 = private unnamed_addr constant [41 x i8] c"unsupported iTunes Media Library version\00", align 1
@.str.3 = private unnamed_addr constant [31 x i8] c"invalid <plist> attribute:\22%s\22\00", align 1
@.str.4 = private unnamed_addr constant [37 x i8] c"<plist> requires \22version\22 attribute\00", align 1
@.str.5 = private unnamed_addr constant [6 x i8] c"plist\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i8*, i32*, i8*, i32*)* @parse_plist_node to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_plist_node(i32* %0, i32* %1, i8* %2, i32* %3, i8* %4, i32* %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i8* %2, i8** %9, align 8
  store i32* %3, i32** %10, align 8
  store i8* %4, i8** %11, align 8
  store i32* %5, i32** %12, align 8
  %16 = load i8*, i8** %9, align 8
  %17 = call i32 @VLC_UNUSED(i8* %16)
  %18 = load i8*, i8** %11, align 8
  %19 = call i32 @VLC_UNUSED(i8* %18)
  store i32 0, i32* %15, align 4
  br label %20

20:                                               ; preds = %40, %6
  %21 = load i32*, i32** %10, align 8
  %22 = call i8* @xml_ReaderNextAttr(i32* %21, i8** %14)
  store i8* %22, i8** %13, align 8
  %23 = icmp ne i8* %22, null
  br i1 %23, label %24, label %41

24:                                               ; preds = %20
  %25 = load i8*, i8** %13, align 8
  %26 = call i64 @strcmp(i8* %25, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %36, label %28

28:                                               ; preds = %24
  store i32 1, i32* %15, align 4
  %29 = load i8*, i8** %14, align 8
  %30 = call i64 @strcmp(i8* %29, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %35

32:                                               ; preds = %28
  %33 = load i32*, i32** %7, align 8
  %34 = call i32 (i32*, i8*, ...) @msg_Warn(i32* %33, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.2, i64 0, i64 0))
  br label %35

35:                                               ; preds = %32, %28
  br label %40

36:                                               ; preds = %24
  %37 = load i32*, i32** %7, align 8
  %38 = load i8*, i8** %13, align 8
  %39 = call i32 (i32*, i8*, ...) @msg_Warn(i32* %37, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.3, i64 0, i64 0), i8* %38)
  br label %40

40:                                               ; preds = %36, %35
  br label %20

41:                                               ; preds = %20
  %42 = load i32, i32* %15, align 4
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %47, label %44

44:                                               ; preds = %41
  %45 = load i32*, i32** %7, align 8
  %46 = call i32 (i32*, i8*, ...) @msg_Warn(i32* %45, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.4, i64 0, i64 0))
  br label %47

47:                                               ; preds = %44, %41
  %48 = load i32*, i32** %7, align 8
  %49 = load i32*, i32** %8, align 8
  %50 = load i32*, i32** %10, align 8
  %51 = load i32*, i32** %12, align 8
  %52 = call i32 @parse_dict(i32* %48, i32* %49, i32* null, i32* %50, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.5, i64 0, i64 0), i32* %51)
  ret i32 %52
}

declare dso_local i32 @VLC_UNUSED(i8*) #1

declare dso_local i8* @xml_ReaderNextAttr(i32*, i8**) #1

declare dso_local i64 @strcmp(i8*, i8*) #1

declare dso_local i32 @msg_Warn(i32*, i8*, ...) #1

declare dso_local i32 @parse_dict(i32*, i32*, i32*, i32*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
